--- a/Tsvanan_kel'.mw
+++ b/Tsvanan_kel'.mw
@@ -29,7 +29,7 @@ Kelen kirjamed, digrafad, trigrafad da niiden virkand:
 <small>*Erižed fonemad om erigoittud katkimil, ühten foneman allofonad — slešal.</small>
 
 == Grammatik ==
-Kelen painand om fiksiruidud edeljäl'gmäižel tavul. Kaks' tonad: korged i madal. Om kaičenus plokkonsonantid.
+Kelen painend om fiksiruidud edeljäl'gmäižel tavul. Kaks' tonad: korged i madal. Om kaičenus plokkonsonantid.
 
 Labializuidud konsonantad kirjutadas «w»-kirjamen ližadusenke: gw, tshw, nyw da m.e..
 
