--- a/Pöudpü.mw
+++ b/Pöudpü.mw
@@ -21,6 +21,13 @@
 [[Fail:Perdix perdix MHNT.ZOO.2010.11.5.10.jpg|thumb|right|250px|Lindun munad]]
 '''Pöudpü''' ({{lang-la|Perdix perdix}}) om levitadud pöud[[lind]] [[Fazanižed]]-sugukundaspäi.
 
+Lind om introduciruidud Pohjoižamerikha. [[Mectuz|Mectusen]] objekt.
+
+== Ümbrikirjutand ==
+Hibj om kehkranvuitte. Täuz'kaznuden lindun ühthine piduz sase 28..32 sanimetrhasai. Nök i käpšud oma mustan mujun. Höunhišton üläpala om kirjav, koričman mujun, kül'ged i händ oma rusttad. Šporoid käpšuil ei ole.
+
+Suguerinend ozutase höunhišton mujus: emäčun mujud oma vauhemb mi ižačun.
+
 {{Commons|Perdix perdix}}
 
 {{stub}}
