--- a/Paranoja_(al'bom).mw
+++ b/Paranoja_(al'bom).mw
@@ -11,7 +11,7 @@
  | Edeline al'bom = [[Blaž]] (1998)
  | Jäl'ghine al'bom = [[Dišu tišinoi]] (2000)
 }}
-'''«Paranoja»''' ({{lang-ru|Паранойя}}, ''Paranoi''), toine nimi '''«Stöklad i beton»''' (ven. ''Стёкла и бетон''), om [[Noskov Nikolai|Nikolai Noskovan]] 2. al'bom, kudamb om pästtud vodel 1999.
+'''«Paranoja»''' ({{lang-ru|Паранойя}}, ''Paranoi''), toine nimi '''«Stöklad i beton»''' (ven. ''Стёкла и бетон''), om venämalaižen [[Noskov Nikolai|Nikolai Noskov]]-pajatajan kahtenz' studijanal'bom, kudamb om pästtud vodel 1999.
 
 == Pajoiden nimikirjutez ==
 <OL>
