--- a/Oksford.mw
+++ b/Oksford.mw
@@ -22,7 +22,7 @@ Eländpunkt mainitase ezmäižen kerdan Angližsaksan aigkirjas vl 912 kuti juma
 Oksford šingotase avtosauvomižel ([[BMW Mini]]), tedoidusil i pästandkodil.
 
 == Geografijan andmused ==
-Lidn sijadase [[Temz]]-jogen randoil, jogen pala nimitase ''Aizis:aks'' lidnas. Matkad [[London]]aspäi om 82 km lodeheze.
+Lidn sijadase [[Temz]]-jogen randoil, jogen pala nimitase ''Aizis:aks'' lidnas. Čaruell-jogi ({{lang-en|Cherwell}} 64 km pitte) lankteb Temzha huralpäi lidnan territorijal. Matkad [[London]]hasai om 82 km suvipäivnouzmha, [[Börmingem]]hasai om 110 km lodeheze.
 
 Vl 2011 lidnan eläjiden lugu oli 157 997 ristitud, sidä kesken läz 30 tuhad üläopenikoid.
 
