--- a/Ploješti.mw
+++ b/Ploješti.mw
@@ -16,15 +16,19 @@
 '''Ploješti''' ({{lang-ro|Ploiești}} [ploˈjeʃtʲ]) om lidn [[Romanii|Romanijan]] suves. Se om [[Prahovan ümbrik]]on administrativine keskuz.
 
 == Istorii ==
-Eländpunktan aluz om pandud vl 1596 Valahijan [[Mihai Rohked]]-valdoičijan ohjandusen aigan (1593−1601).
+Eländpunktan aluz om pandud vl 1596 Valahijan [[Mihai Rohked]]-valdoičijan ohjandusen aigan (1593−1601). Lidn kändihe torguindan da käzitöiden edheotandoiden keskuseks 17.-18. voz'sadoil. [[Kivivoi]]n samižen keskuz 19. voz'sadan keskespäi.
 
-Ploješti šingotase [[kivivoi]]n samižel da ümbriradmižel.
+Karpatan manrehkaiduz mureni lidnad lujas vn 1940 10. kül'mkud. Ploještin region oli kivivoin päpurtkeks nacistižen Germanijan täht Toižen mail'man sodan aigan.
+
+Ploješti šingotase kivivoin samižel da sen ümbriradmižel tähäsai.
 
 == Geografijan andmused ==
 Lidn sijadase Dambu-jogen randal ({{lang-ro|Dâmbu}}, Prahovan i [[Dunai]]n bassein), 165 m ü.m.t. keskmäižel korktusel. Matkad [[Buharest]]hasai om 56 km suvhe.
 
 == Eläjad ==
-Vn 2011 Romanijan rahvahanlugemižen mödhe lidnan eläjiden lugu oli 209 945 ristitud. Kaikiš suremb ristitišt oli 252 715 vl 1992. Eläjiden 90,6% oma [[romanijalaižed]], 90,7% — [[ortodoksine hristanuskond|ortodoksižed hristanuskojad]] (2011).
+Vn 2011 Romanijan rahvahanlugemižen mödhe lidnan eläjiden lugu oli 209 945 ristitud. Kaikiš suremb ristitišt oli 252 715 vl 1992.
+
+Eläjiden 90,6% oma [[romanijalaižed]], 90,7% — [[ortodoksine hristanuskond|ortodoksižed hristanuskojad]] (2011).
 
 == Homaičendad ==
 <references />
