--- a/Ruan.mw
+++ b/Ruan.mw
@@ -9,18 +9,22 @@
  | Voz' = 2015
  | Pind = 21.38
  | Fail = Rouen montage.jpg
- | Pämez' = Ivon Rober (2014−2020)
+ | Pämez' = Nikolä Majer-Rossinjol'<br/>(2020−2026,<br/>''Nicolas Mayer-Rossignol'')
  | Telefonkod = +33-235
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
 [[Fail:Plan de Rouen.jpg|thumb|left|250px|Lidnan shematine nägu]]
 '''Ruan''' ({{lang-fr|Rouen}} [ʁwɑ̃]) om lidn [[Francii|Francijan]] pohjoižes. Se om [[Normandii]]-regionan administrativine da istorine pälidn, mugažo Mererandaline Sen-departamentan keskuz.
 
+== Geografijan andmused ==
 Lidn sijadase [[Sen]]-jogen randoil, 2..152 m ü.m.t.korktusil. Matkad [[Pariž]]hasai om 136 km suvipäivnouzmha.
 
+Avtobusad, tramvaid, taksid i velosipediden kortom oma kundaližeks transportaks lidnas sen ümbrištonke.
+
+== Eläjad ==
 Vn 2011 [[Evropan Ühtištuz|EÜ:n]] rahvahanlugemižen mödhe lidnan eläjiden lugu oli 111 557 ristitud i 655 tuhad ezilidnoidenke, lidnaglomeracijan pind — 1800 km². Kaikiš suremb lidnan ristitišt oli 124 987 eläjad vl 1911.
 
-Avtobusad, tramvaid, taksid i velosipediden kortom oma kundaližeks transportaks lidnas sen ümbrištonke.
+Edeline lidnan pämez' om Ivon Rober (2014−2020)
 
 == Sebruzlidnad ==
 * {{POL|#}} [[Gdan'sk]], [[Pol'šanma]] (vspäi 1992)
