--- a/Ruan.mw
+++ b/Ruan.mw
@@ -17,14 +17,14 @@
 '''Ruan''' ({{lang-fr|Rouen}} [ʁwɑ̃]) om lidn [[Francii|Francijan]] pohjoižes. Se om [[Normandii]]-regionan administrativine da istorine pälidn, mugažo Mererandaline Sen-departamentan keskuz.
 
 == Geografijan andmused ==
-Lidn sijadase [[Sen]]-jogen randoil, 2..152 m ü.m.t.korktusil. Matkad [[Pariž]]hasai om 136 km suvipäivnouzmha.
+Lidn sijadase [[Sen]]-jogen randoil, 2..152 m ü.m.t. korktusil. Matkad [[Pariž]]hasai om 136 km suvipäivnouzmha.
 
 Avtobusad, tramvaid, taksid i velosipediden kortom oma kundaližeks transportaks lidnas sen ümbrištonke.
 
 == Eläjad ==
 Vn 2011 [[Evropan Ühtištuz|EÜ:n]] rahvahanlugemižen mödhe lidnan eläjiden lugu oli 111 557 ristitud i 655 tuhad ezilidnoidenke, lidnaglomeracijan pind — 1800 km². Kaikiš suremb lidnan ristitišt oli 124 987 eläjad vl 1911.
 
-Edeline lidnan pämez' om Ivon Rober (2014−2020)
+Edeline lidnan pämez' om Ivon Rober (2014−2020, ''Yvon Robert'')
 
 == Sebruzlidnad ==
 * {{POL|#}} [[Gdan'sk]], [[Pol'šanma]] (vspäi 1992)
