--- a/Uppsal.mw
+++ b/Uppsal.mw
@@ -16,14 +16,14 @@
 '''Uppsal''' ({{lang-sv|Uppsala}} [ɵpˈsɑːla] «Üläkodi») om [[Ročinma]]n universitetine lidn valdkundan suvipäivnouzmas. Se om [[Uppsalan agj]]an administrativine keskuz, Ročinman nellänz' lidn eläjiden lugun mödhe.
 
 == Istorii ==
-Eländpunktan aluz om pandud 5. voz'sadal meiden erad. Vanh Uppsal paloi vl 1245, i nimitihe ''Estra-Aros''-eländpunktad Uppsalaks 5 km suvhe. Om Ročinman jumalankodikundan keskuseks. Universitet zavodi radod vl 1477.
+Eländpunktan aluz om pandud 5. voz'sadal meiden erad. Vanh Uppsal paloi vl 1245, i nimitihe ''Estra-Aros''-eländpunktad Uppsalaks 5 km suvhe. Om Ročinman jumalankodikundan keskuseks. [[Uppsalan universitet]] zavodi radod vl 1477.
 
-Uppsal šingotase zelliden pästandal i kofen pakuitesel, medicinižil tedoidusil.
+Uppsal šingotase zelliden (''[[Pfizer]]'') i medicinižiden ladimiden (''Fresenius'') pästandal, kofen pakuitesel, medicinižil tedoidusil.
 
 == Geografijan andmused ==
 Lidn sijadase Füris-jogen randoil, 15 m ü.m.t. keskmäižel korktusel. Matkad [[Stokhol'm]]hasai om 70 km suvhe.
 
-Vl 2010 lidnan eläjiden lugu oli 140 454 ristitud.
+Vl 2010 lidnan eläjiden lugu oli 140 454 ristitud. Äi eläjid ajeltas radmaha Stokhol'mas.
 
 == Homaičendad ==
 <references />
