*Empty MediaWiki Message*

--- a/Iskitim.mw
+++ b/Iskitim.mw
@@ -14,7 +14,7 @@
  | Avtokod = 54. 154
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-'''Iskitim''' ({{lang-ru|Искитим}}) om [[Venäma]]n lidn da lidnümbrik [[Novosibirskan agj]]an suvipäivnouzmas. Se om agjan koumanz' lidn eläjiden lugun mödhe, om [[Iskitiman rajon]]an administrativižeks keskuseks mugažo (vspäi 1935), ei mülü sihe.
+'''Iskitim''' ({{lang-ru|Искити́м}}) om [[Venäma]]n lidn da lidnümbrik [[Novosibirskan agj]]an suvipäivnouzmas. Se om agjan koumanz' lidn eläjiden lugun mödhe, om [[Iskitiman rajon]]an administrativižeks keskuseks mugažo (vspäi 1935), ei mülü sihe.
 
 == Istorii ==
 15.-17. voz'sadal tulnuded türkad-[[teleutad]] küksiba ahtištoitten elänuzid [[suomalaiž-ugrilaižed rahvahad|suomalaiž-ugrilaižid rahvahid]], no kaikiden heiden lugu oli pen'. Vn 1717 aigkirjas Šipunovo-, Koinovo-, Černodirovo- i Vilkovo-küläd mainitasoiš nügüdläižen lidnan territorijal. Vll 1912−1916 «Transsib — Barnaul»-raudte läbiti tahondad, i saudihe ''raudtesarad nomer 5'', möhemba udesnimitihe sidä ''Iskitim''. 1920-nzil vozil panihe raudtesarad küläkundan keskuseks. Vll 1930−1934 järed Černorečenskii-cementtegim om saudud [[mouckivi|mouckiven]] löudmižsijidenno. Vn 1933 10. päiväl sulakud ühtištuihe nell' küläd da türmatud mehiden zonad ''Iskitim-radnikžiloks''. Vl 1951 anttihe lidnan statusad agjan alištusenke.
