+ galerei, +hom, aktualizacii

--- a/Karasuk_(lidn).mw
+++ b/Karasuk_(lidn).mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Karasukan lidnanznam
  | Flag text = Karasukan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 27,196
- | Voz' = 2017
+ | Eläjiden lugu = 26,733
+ | Voz' = 2021
  | Pind = 30
  | Fail = Храм Андрея Первозванного в Карасуке.jpg
  | Pämez' = Viktor Baštanov<br />(eloku 2012—)
@@ -27,9 +27,20 @@ Lidn sijadase Karasuk-jogen (531 km) hural randal sen lanktendan tahondas vedhud
 Jarok-žilo (63 rist. vl 2017) mülüb lidnankundha Karasukan ližaks. Lidnankundan pind — 32,71 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 28 586 ristitud, lidnankundan — 28 652 ristitud, rajonan koume videndest. Kaikiš suremb lidnan ristitišt oli 30 900 eläjad vll 1996 i 2000. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Ezikuctud Ondrii-apostolan jumalanpert' om olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 28 586 ristitud, lidnankundan — 28 652 ristitud, rajonan koume videndest. Kaikiš suremb lidnan ristitišt oli 30 900 eläjad vll 1996 i 2000.
 
-Karasukan pedagogine kolledž om professionaližen opendusen aluzkundaks.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Ezikuctud Ondrii-apostolan jumalanpert'<ref>[http://sobory.ru/geo/locat/14371 Karasukan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om olmas lidnas.
+
+Karasukan pedagogine kolledž<ref>[http://www.karasukpedcollege.ru/ Karasukan pedagogižen kolledžan sait (''karasukpedcollege.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Karasuk lake Solenoe.jpg|Solav-järv ({{lang-ru|Озеро Солёное}}), nägu vn 2008 redukus
+Практик - panoramio (1).jpg|Praktik-lauk vl 2013
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://adm-karasuk.nso.ru/ Lidnan da rajonan tobmuden aluzkundoiden oficialine sait (''adm-karasuk.nso.ru'').] {{ref-ru}}
