/* Armastushe sidodud vepsän muštatišed */ +

--- a/Armastuz.mw
+++ b/Armastuz.mw
@@ -13,6 +13,7 @@ Amuižed grekalaižed erištiba armastusen toižendoid: kanzas («storge»), seb
 <blockquote>
 * ''Armaz kuti hahk lambaz verhas läväs.''
 * ''Hambhan kibu da mel'heižen kibu oma ühtejiččed.''
+* ''Ičeiž mad armhembad, ičeiž mecad čomembad.''
 * ''Solatomad särpta da ei mel'hišt čukoida.''
 * ''Äi om hüvid, da vähä om armhid.''
 </blockquote>
