/* Čomudehe sidodud vepsän muštatišed */ +

--- a/Čomuz.mw
+++ b/Čomuz.mw
@@ -15,6 +15,7 @@ Ristitun čomuz oleleb hibjan da irdpol'ne čomuz, i hengeline čomuz. Čomuden 
 <blockquote>
 * ''Čoma i unes čoma.''
 * ''Ei kalliž ole čomuz, a kalliž om pä.''
+* ''Ičeiž mad armhembad, ičeiž mecad čomembad.''
 * ''Kand sädota, ka mugažo čoma linneb.''
 * ''Lop om čoma, ka i kaik om čoma.''
 * ''Sigä om čoma, kus meid ei ole.''
