--- a/Venäman_rubl'.mw
+++ b/Venäman_rubl'.mw
@@ -27,6 +27,12 @@ Regulator om Venälaižen Federacijan Keskuzbank.
 | align="right"|[[Fail:Banknote 5000 rubles (1997) front.jpg|240px]] ||align="left"|[[Fail:Banknote 5000 rubles (1997) back.jpg|240px]] || [[Habarovsk]]an mel'heižtahod<br />'''A:''' [[Murav'jov-Amurskii|Murav'jov-Amurskijan]] muštpacaz<br />'''R:''' Sild päliči [[Amur]]-joges 
 |}
 
+== Venäman rublähä sidodud vepsän muštatišed ==
+<blockquote>
+* ''Eci kut rublän ecid.''
+* ''Orjale polušk, radnikale poltin, mastarile rubl'.''
+</blockquote>
+
 == Irdkosketused ==
 * [http://cbr.ru/bank-notes_coins/bank-notes/ Informacii banknotoiš Venäman Bankan ''cbr.ru''-saital.] {{ref-ru}}
 * [http://www.bonistica.ru/cat/europe/russia/ Venäman rubliden polhe ''bonistica.ru''-saital.] {{ref-ru}}
