--- a/Pä.mw
+++ b/Pä.mw
@@ -26,6 +26,7 @@ Südäimižed:
 
 == Pähä sidodud vepsän muštatišed ==
 <blockquote>
+* ''Andaižin mel't pähä, da ičelain om vähä.''
 * ''Ei kalliž ole čomuz, a kalliž om pä.''
 * ''Kažita hired i pän södas.''
 * ''Kelel päd ed söta.''
