/* Veneheze sidodud vepsän muštatišed */ +

--- a/Veneh.mw
+++ b/Veneh.mw
@@ -11,6 +11,7 @@ Nügüd'aigan ottas kävutamižhe venehid samha lebud, kalanpüdandan täht, tom
 == Veneheze sidodud vepsän muštatišed ==
 <blockquote>
 * ''Aig andab tünen meren, aig — vodajan venehen.''
+* ''Mehel om mela kädes, venehen jumal veb.''
 * ''Verhas venehes kaikušti om enamb kalad.''
 </blockquote>
 
