/* Meheze sidodud vepsän muštatišed */ +

--- a/Mez'.mw
+++ b/Mez'.mw
@@ -17,6 +17,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
 * ''Kala ecib süvemban, a mez' paremban.''
 * ''Küläd eile koiratomad, mad eile mehetomad.''
+* ''Mehel om mela kädes, venehen jumal veb.''
 * ''Mez' ei völ koliške, a kutjal söttas.''
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
 * ''Mitte aig, mugoi i mez'.''
