/* Ehtha sidotud vepsän muštatišed */ +

--- a/Eht.mw
+++ b/Eht.mw
@@ -7,6 +7,7 @@ Necen aigan [[Päiväine]] sabustab [[gorizont]]ad da zavodiše [[tikahtuz]]; ne
 <blockquote>
 * ''Ehtal itkend, homencel nagrand.''
 * ''Elin päivän ehthasai.''
+* ''Homendez om ehtad melevamb.''
 * ''Mäni päiv, tuli eht — surm i lähemba.''
 </blockquote>
 
