/* Meheze sidodud vepsän muštatišed */ +

--- a/Mez'.mw
+++ b/Mez'.mw
@@ -21,6 +21,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 * ''Mez' ei völ koliške, a kutjal söttas.''
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
 * ''Mitte aig, mugoi i mez'.''
+* ''Oled mez' ka ole, a ed ole ka kole.''
 * ''Sanal voib mez' rikta.''
 * ''Söm mehen kandišeb.''
 </blockquote>
