--- a/Mez'.mw
+++ b/Mez'.mw
@@ -15,10 +15,13 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 <blockquote>
 * ''Ak da lehm, mužik da hebo.''
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
+* ''Ei kaik mehed olgoi, kudambad kadjoid kandištas.''
+* ''Ei severz' mehid, kuverz' kadjoid.''
 * ''Kala ecib süvemban, a mez' paremban.''
 * ''Küläd eile koiratomad, mad eile mehetomad.''
 * ''Mehel om mela kädes, venehen jumal veb.''
 * ''Mez' ei völ koliške, a kutjal söttas.''
+* ''Mez' nimel ei elä, a radol.''
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
 * ''Mitte aig, mugoi i mez'.''
 * ''Oled mez' ka ole, a ed ole ka kole.''
