--- a/Söm.mw
+++ b/Söm.mw
@@ -25,6 +25,7 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Lehm tanhal — söm pertiš.''
 * ''Leib da vezi — saldatan söm.''
 * ''Luzikaine, ole hüvä, mäne sömha!''
+* ''Mahtad munid söda, ka mahta i kanoid sötta.''
 * ''Mez' söb, mez' sab, mehele andab Jumal.''
 * ''Midä ei sögoi, sidä i laudale ei togoi.''
 * ''Mitte samine, mugoi i sömine.''
