--- a/Hobed.mw
+++ b/Hobed.mw
@@ -18,9 +18,15 @@ Londuseline hobed kogoneb kahtes stabiližes izotopaspäi: <sup>107</sup>Ag (51,
 == Samine ==
 Vl 2014 saihe 26,8 tuhad tonnoid mail'mas. Todištadud mail'man sadud varad oliba 360 tuhad tonnoid vl 1986, i ned poletas rajadusen tagut tegimištos. Vn 2018 heinkus hobed maksoi 15,5 US$ troižes uncijas vai 495 US$ kilogrammas. Sadas [[vas'k]]en, [[kuld]]an, [[hahktin]]an i [[cink]]an ümbriradmiženke tobjimalaz. Järedad tegijad oma [[Meksik]], [[Peru]] i [[Kitai]], mail'man samižen enamba pol't.
 
-== Hobedha sidodud vepsän muštatiž ==
+== Hobedha sidodud vepsän muštatiž i ozoitez ==
+=== Muštatiž ===
 <blockquote>
 * ''Ei kaik ole kuld, mi kuštab, ei kaik ole hobed, mi hoštab.''
+</blockquote>
+
+=== Ozoitez ===
+<blockquote>
+* Ku murendad jän, ota hobed, ku otad hobedan, ota kuld (muna).
 </blockquote>
 
 == Kacu mugažo ==
