/* Kuldha sidodud vepsän muštatišed */ + ozoitez

--- a/Kuld.mw
+++ b/Kuld.mw
@@ -19,11 +19,17 @@ Kuld om inertine lujas himižešti. Reagiruib HClO<sub>4</sub> i H<sub>2</sub>Se
 == Kävutand ==
 Kuld om lujas tetab juvelirine metall. Ottas kävutamižhe sidä mugažo elektrotehnikas, elektronikas da medicinas. Kuld om mail'man finansižen sisteman üks' päelementoišpäi, ende oigenzi [[rahad|rahoiden]] funkcijad. Erazvuiččiden valdkundoiden päbankad tehtas ičheze sured varad kuldad. Kuldaspäi tehtas kal'hid rahuzid. Om metallan löudmižsijid äjiš valdkundoiš.
 
-== Kuldha sidodud vepsän muštatišed ==
+== Kuldha sidodud vepsän muštatišed da ozoitesed ==
+=== Muštatišed ===
 <blockquote>
 * ''Ei i car' kuldad sö.''
 * ''Ei kaik ole kuld, mi kuštab, ei kaik ole hobed, mi hoštab.''
 * ''Tervhuz om kal'hemb kuldad.''
+</blockquote>
+
+=== Ozoitez ===
+<blockquote>
+* Ku murendad jän, ota hobed, ku otad hobedan, ota kuld (muna).
 </blockquote>
 
 == Irdkosketused ==
