/* Ekonomikha sidodud vepsän muštatišed */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -29,6 +29,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Kenen tavar, ka se i arvon paneb.''
 * ''Korman ei käske.'' (rahoid ei ole)
 * ''Küzuda eile vargastada. / Küzundas ei lögoi.''
+* ''Lämoipalod mustoil ed sambuta.''
 * ''Mez' nimel ei elä, a radol.''
 * ''Orjale polušk, radnikale poltin, mastarile rubl'.''
 * ''Tervhut ed osta.''
