--- a/Naine.mw
+++ b/Naine.mw
@@ -9,6 +9,7 @@ Naižen alaigäčud oma [[neičukaine]] i [[neižne]].
 == Naižhe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ak da lehm, mužik da hebo.''
+* ''Ak mužikatoi — kutnä haumeh aidatoi.''
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
 * ''Hebon higoho da akan voikhu ala kacu.''
 * ''Kana eile lind, ak eile ristit.''
