--- a/Mez'.mw
+++ b/Mez'.mw
@@ -14,6 +14,7 @@ Mehen organizm om geterogametine, toižin sanoin kaks' erazvuittušt suguhromoso
 == Meheze sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ak da lehm, mužik da hebo.''
+* ''Ak mužikatoi — kutnä haumeh aidatoi.''
 * ''Ak tespäi tagaiži pördlese, a mužik, hot' huba, ei pördelte.''
 * ''Ei kaik mehed olgoi, kudambad kadjoid kandištas.''
 * ''Ei severz' mehid, kuverz' kadjoid.''
