--- a/Lidn.mw
+++ b/Lidn.mw
@@ -8,8 +8,9 @@ Nügüd'aigaižed lidnad jagasoiš penihe (vähemb 50 tuhad eläjid), keskmäiž
 
 [[Lidnansauvomine]] tedoidab lidnoiden šingotesen käskusid da ohjandimid.
 
-== Lidnha sidotud vepsän muštatiž ==
+== Lidnha sidodud vepsän muštatišed ==
 <blockquote>
+* ''Ei kaht carid ühthe lidnha mülütagoi.''
 * ''Ni küläs kündai, ni lidnas lendai.'' (nimihe ei sättu ristitun polhe)
 </blockquote>
 
