--- a/Turkan_kel'.mw
+++ b/Turkan_kel'.mw
@@ -1,5 +1,5 @@
 {{1000}}{{A10000}}
-[[Fail:MapOfTurkishSpeakers.png|thumb|250px|Kelen levigandmižmahtusen kart mail'mas]]
+[[Fail:Map of Turkish Language.svg|thumb|250px|Kelen levigandmižmahtusen kart mail'mas]]
 '''Turkan (turcijan) kel' ''' (ičeze nimituz: ''Türk dili'' [ˈtyɾc 'dili], lühüdas ''Türkçe'' [ˈt̪yɾktʃe]) om üks' [[türkižed keled|türkižiš kelišpäi]].
 
 Necil kelel pagištas [[turkad]] [[Turkanma]]s (ristitišton 93% vl 2005) da [[Kipr|Pohjoižkipras]], i enamba kaiked neniš verhiš maiš: [[Saksanma]]s (2,5 mln pagižijoid) i [[Bolgarii|Bolgarijas]] (750 tuh. rist.). Pagižijoiden lugu om läz 65 millionad ristituid mamankeleks i läz 10 millionad pagižijoid toižeks keleks, kaikiš enamba levitadud türkižen keliden keskes. Kirjkel' om [[latinan kirjamišt]]on pohjal (edel 1928. vot oti [[araban kirjamed|araban kirjkelen]] aluseks), kirjankel' om sätud [[Stambul]]an paginan alusel i vajehti [[osmanan kel']]t. Om äi suližid paginoid, ned sätas kontinuumad Stambulaspäi [[Azerbaidžan]]an röunhasai.
