--- a/Mbur.mw
+++ b/Mbur.mw
@@ -15,8 +15,12 @@
 }}
 '''Mbur''' ({{lang-fr|M'bour}} vai ''Mbour'', {{lang-wo|Mbuur}}) om lidn da meriport [[Senegal]]an päivlaskmas, mülüb [[Tiesan agj]]aha. Se om valdkundan nellänz' lidn eläjiden lugun mödhe.
 
-Eländpunktan aluz om pandud 19. voz'sadal, sen kommun om sätud vl 1927. Mbur šingotase meriportal, turizmal, kalanpüdandal i pähkmiden ümbriradmižel, [[titan (himine element)|titanan]] samižel.
+== Istorii ==
+Eländpunktan aluz om pandud 19. voz'sadal, sen kund (kommun) om sätud vl 1927.
 
+Mbur šingotase meriportal, turizmal, kalanpüdandal i pähkmiden ümbriradmižel, [[titan (himine element)|titanan]] samižel. Afrikan matematižen institutan Senegalan palakund om avaitud lidnas. [[Žestkel'|Žestkelen]] sijaline toižend om olmas.
+
+== Geografijan andmused ==
 Lidn sijadase agjan suves. Lidnan keskuz om [[Atlantine valdmeri|Atlantižen valdmeren]] randal, 0 m ü.m.t. keskmäižel korktusel. Matkad [[Dakar]]-pälidnhasai om 55 km lodeheze orhal vai 80 km avtotedme.
 
 Vl 2002 kaik 153 503 ristitud elihe lidnas 17,25 km² pindal. Kaikiš suremb ristitišt om nügüd'.
