--- a/Blek_Lukas.mw
+++ b/Blek_Lukas.mw
@@ -2,7 +2,14 @@
 | изображение = Lucas Black Get Low TIFF09. (cropped 2).jpg
 | описание изображения = Lukas Blek [[Toronto]]n fil'mfestivalil, vn 2009 sügüz'ku
 }}
-'''Lukas Jork Blek''' ({{lang-en|Lucas York Black}}; sünd. [[29. kül'mku]] [[1982]], [[Dekeiter (Alabam)]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]) om amerikalaine akt'or, kudamb tegihe tetabaks [[Šon Bosuell]]an roliš «[[Forsaž 3]]»- da «[[Forsaž 7]]»-fil'miš.
+'''Lukas Jork Blek''' ({{lang-en|Lucas York Black}}; sünd. [[29. kül'mku]] [[1982]], [[Dekeiter (Alabam)]], [[Amerikan Ühtenzoittud Valdkundad|AÜV]]) om amerikaine akt'or, kudamb tegihe tetabaks [[Šon Bosuell]]an roliš «[[Forsaž 3]]»- da «[[Forsaž 7]]»-fil'miš.
+
+== Biografii ==
+Blek om sündnu baptizman uskojiden kanzha, noremb koumandes lapsespäi. Vändab rolid fil'miš üks'toštkümnevoččes igäspäi. Om pästnus keskškolaspäi vl 2001.
+
+Mez' om naižiš vspäi 2010, Meggi O'Brajen-jurist om hänen ak. Sündutihe koume last naimiželos.
+
+Joudaigan Lukas navedib sportata (basketbol, futbol, gol'f).
 
 == Homaičendad ==
 <references/>
