--- a/.ca.mw
+++ b/.ca.mw
@@ -1,4 +1,12 @@
-'''.ca''' om [[Kanad]]an [[DNS|Internet-domen]]. Se om avaitud [[1987. voz'|1987]]-nden voden 14. päiväl semendkud.<ref>[http://iana.org/domains/root/db/ca.html IANA — .ca Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.ca''' om [[Kanad]]an [[DNS|Internet-domen]]. Se om avaitud vn [[1987. voz'|1987]] 14. päiväl semendkud<ref>[http://iana.org/domains/root/db/ca.html IANA — .ca Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Vn 2019 sulakus domennimiden lugu ületi 2,8 mln.
+
+Registracii om lasktud kahtendel tazopindal. Edel vn 2010 redukud kompanijoiden saitan registracii oli lasktud provincijan domenal vaiše. Kaikutte provincii om ičeze kahtenden tazopindan domenanke, municipalitetan domen sijadase koumandel tazopindal.
+
+Tarbhaičendad registracijan täht:
+* Kanadan rahvahanikuz vai kaikenaigaižen rezidentan status, täuz'kaznuden igä
+* organizacijal legaline status pidab olda Kanadas
+
+Vn 2013 vilukuspäi voib kävutada domennimes latinan kelen erasid ližakirjamid [[francijan kel'|francijan kelen]] täht.
 
 == Homaičendad ==
 <references />
