--- a/.ca.mw
+++ b/.ca.mw
@@ -1,12 +1,12 @@
-'''.ca''' om [[Kanad]]an [[DNS|Internet-domen]]. Se om avaitud vn [[1987. voz'|1987]] 14. päiväl semendkud<ref>[http://iana.org/domains/root/db/ca.html IANA — .ca Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Vn 2019 sulakus domennimiden lugu ületi 2,8 mln.
+'''.ca''' om [[Kanad]]an [[DNS|Internet-domen]]. Se om avaitud vn [[1987. voz'|1987]] 14. päiväl semendkud<ref>[http://iana.org/domains/root/db/ca.html IANA — .ca Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Vn 2019 sulakus domennimiden lugu ületi 2,8 millionad.
 
-Registracii om lasktud kahtendel tazopindal. Edel vn 2010 redukud kompanijoiden saitan registracii oli lasktud provincijan domenal vaiše. Kaikutte provincii om ičeze kahtenden tazopindan domenanke, municipalitetan domen sijadase koumandel tazopindal.
+Registracii om lasktud kahtendel tazopindal. Edel vn 2010 redukud kompanijoiden saitan registracii oli lasktud provincijan domenal vaiše, koumandel tazopindal. Kaikutte provincii om ičeze kahtenden tazopindan domenanke, municipalitetan domen sijadase koumandel tazopindal.
 
 Tarbhaičendad registracijan täht:
-* Kanadan rahvahanikuz vai kaikenaigaižen rezidentan status, täuz'kaznuden igä
-* organizacijal legaline status pidab olda Kanadas
+* Kanadan rahvahanikuz vai kaikenaigaižen rezidentan status, täuz'kaznuden igä;
+* organizacijal legaline status pidab olda Kanadas.
 
-Vn 2013 vilukuspäi voib kävutada domennimes latinan kelen erasid ližakirjamid [[francijan kel'|francijan kelen]] täht.
+Vn 2013 vilukuspäi voib kävutada domennimes latinan kelen erasid ližakirjamid [[francijan kel'|francijan kelen]] täht: é, ë, ê, è, â, à, æ, ô, œ, ù, û, ü, ç, î, ï, ÿ.
 
 == Homaičendad ==
 <references />
