--- a/.ca.mw
+++ b/.ca.mw
@@ -8,6 +8,25 @@ Tarbhaičendad registracijan täht:
 
 Vn 2013 vilukuspäi voib kävutada domennimes latinan kelen erasid ližakirjamid [[francijan kel'|francijan kelen]] täht: é, ë, ê, è, â, à, æ, ô, œ, ù, û, ü, ç, î, ï, ÿ.
 
+Kahtenden tazopindan reglamentiruidud domenad:
+;Kaik valdkund
+* '''.gc.ca''' — valdkundaližed organad
+* '''.mil.ca''' — Kanadan kaičendministruz 
+;Provincijad da territorijad
+* '''.ab.ca''' — Al'bert
+* '''.bc.ca''' — Britanine Kolumbii
+* '''.pe.ca''' — Eduard-princan Sar'
+* '''.yk.ca''' — Jukon
+* '''.qc.ca''' — Kvebek ([[.quebec]] mugažo)
+* '''.nt.ca''' — Lodehližed territorijad
+* '''.mb.ca''' — Manitob
+* '''.nb.ca''' — Nju Bransuik
+* '''.nl.ca''' — Njufaundlend i Labrador (ende .nf.ca mugažo)
+* '''.nu.ca''' — Nunavut
+* '''.on.ca''' — Ontario
+* '''.sk.ca''' — Saskatčevan
+* '''.ns.ca''' — Uz' Šotlandii
+
 == Homaičendad ==
 <references />
 
