--- a/.ca.mw
+++ b/.ca.mw
@@ -8,7 +8,7 @@ Tarbhaičendad registracijan täht:
 
 Vn 2013 vilukuspäi voib kävutada domennimes latinan kelen erasid ližakirjamid [[francijan kel'|francijan kelen]] täht: é, ë, ê, è, â, à, æ, ô, œ, ù, û, ü, ç, î, ï, ÿ.
 
-Kahtenden tazopindan reglamentiruidud domenad:
+== Kahtenden tazopindan reglamentiruidud domenad ==
 ;Kaik valdkund
 * '''.gc.ca''' — valdkundaližed organad
 * '''.mil.ca''' — Kanadan kaičendministruz 
@@ -24,7 +24,7 @@ Kahtenden tazopindan reglamentiruidud domenad:
 * '''.nl.ca''' — Njufaundlend i Labrador (ende .nf.ca mugažo)
 * '''.nu.ca''' — Nunavut
 * '''.on.ca''' — Ontario
-* '''.sk.ca''' — Saskatčevan
+* '''.sk.ca''' — Saskačevan
 * '''.ns.ca''' — Uz' Šotlandii
 
 == Homaičendad ==
