--- a/.ad.mw
+++ b/.ad.mw
@@ -1,4 +1,6 @@
-'''.ad''' om [[Andorr]]an [[DNS|Internet-domen]]. Se om avaitud [[1996. voz'|1996]]-nden voden 9. päiväl vilukud.<ref>[http://iana.org/domains/root/db/ad.html IANA - .ad Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.ad''' om [[Andorr]]an [[DNS|Internet-domen]]. Se om avaitud [[1996. voz'|1996]]-nden voden 9. päiväl vilukud.<ref>[http://iana.org/domains/root/db/ad.html IANA — .ad Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+
+Registracii om röunatud nenil kategorijoil: Andorran eläjad i Andorran torguindmarkoiden pidajad. Ühten ristitun domennimiden lugu om röunatud mugažo.
 
 == Homaičendad ==
 <references />
@@ -6,6 +8,7 @@
 == Irdkosketused ==
 * [http://www.nic.ad/ Domenan sait (''nic.ad'').] {{ref-en}} {{ref-fr}} {{ref-es}}
 * [http://iana.org/domains/root/db/ad.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.ad}}
 
 {{CcTLD}}
 
