--- a/.ad.mw
+++ b/.ad.mw
@@ -1,6 +1,8 @@
-'''.ad''' om [[Andorr]]an [[DNS|Internet-domen]]. Se om avaitud [[1996. voz'|1996]]-nden voden 9. päiväl vilukud.<ref>[http://iana.org/domains/root/db/ad.html IANA — .ad Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.ad''' om [[Andorr]]an [[DNS|Internet-domen]]. Se om avaitud [[1996. voz'|1996]]-nden voden 9. päiväl vilukud<ref>[http://iana.org/domains/root/db/ad.html IANA — .ad Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Administriruiše Andorra Telecom-kompanijal.
 
-Registracii om röunatud nenil kategorijoil: Andorran eläjad i Andorran torguindmarkoiden pidajad. Ühten ristitun domennimiden lugu om röunatud mugažo.
+Registracii om lasktud kahtendel tazopindal i om röunatud nenil kategorijoil: Andorran eläjad i Andorran torguindmarkoiden pidajad. Ühten ristitun domennimiden lugu om röunatud mugažo.
+
+Koumen tazopindan '''.nom.ad'''-domen kävutase personoiden saitoiden täht.
 
 == Homaičendad ==
 <references />
