--- a/.ad.mw
+++ b/.ad.mw
@@ -1,8 +1,8 @@
-'''.ad''' om [[Andorr]]an [[DNS|Internet-domen]]. Se om avaitud [[1996. voz'|1996]]-nden voden 9. päiväl vilukud<ref>[http://iana.org/domains/root/db/ad.html IANA — .ad Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Administriruiše Andorra Telecom-kompanijal.
+'''.ad''' om [[Andorr]]an [[DNS|Internet-domen]]. Se om avaitud [[1996. voz'|1996]]-nden voden 9. päiväl vilukud<ref>[http://iana.org/domains/root/db/ad.html IANA — .ad Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Administriruiše Andorra Telecom-kompanijal. Vl 2015 pol'tošt tuhad domennimid oli .ad-zonas.
 
-Registracii om lasktud kahtendel tazopindal i om röunatud nenil kategorijoil: Andorran eläjad i Andorran torguindmarkoiden pidajad. Ühten ristitun domennimiden lugu om röunatud mugažo.
+Registracii om lasktud kahtendel tazopindal i om röunatud nenil kategorijoil: Andorran rahvahanikad i Andorran torguindmarkoiden pidajad. Ühten ristitun domennimed oma röunatud koume-lugul. Ei sa kävutada specialižid simvolid domennimes. Andorran ohjastuz kodvib kaikuttušt registracijad.
 
-Koumen tazopindan '''.nom.ad'''-domen kävutase personoiden saitoiden täht.
+Kahtenden tazopindan '''.nom.ad'''-domen kävutase personoiden saitoiden täht.
 
 == Homaičendad ==
 <references />
