--- a/.no.mw
+++ b/.no.mw
@@ -1,3 +1,4 @@
+[[Fail:.no logo.svg|thumb|right|250px|Domenan logotip]]
 '''.no''' om [[Norvegii|Norvegijan]] [[DNS|Internet-domen]]. Se om avaitud [[1987. voz'|1987]]-nden voden 17. päiväl keväz'kud.<ref>[http://iana.org/domains/root/db/no.html IANA — .no Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
 
 == Homaičendad ==
@@ -6,6 +7,7 @@
 == Irdkosketused ==
 * [http://www.norid.no/ Domenan sait (''norid.no'')] {{ref-en}} {{ref-no}}, ohjandai om ''«UNINETT Norid A/S»'', Tronheim
 * [http://iana.org/domains/root/db/no.html IANA-informacii (''iana.org'').] {{ref-en}}
+{{Commons|Category:.no}}
 
 {{CcTLD}}
 
