--- a/.no.mw
+++ b/.no.mw
@@ -1,11 +1,13 @@
 [[Fail:.no logo.svg|thumb|right|250px|Domenan logotip]]
-'''.no''' om [[Norvegii|Norvegijan]] [[DNS|Internet-domen]]. Se om avaitud [[1987. voz'|1987]]-nden voden 17. päiväl keväz'kud.<ref>[http://iana.org/domains/root/db/no.html IANA — .no Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>
+'''.no''' om [[Norvegii|Norvegijan]] [[DNS|Internet-domen]]. Se om avaitud [[1987. voz'|1987]]-nden voden 17. päiväl keväz'kud<ref>[http://iana.org/domains/root/db/no.html IANA — .no Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Kaik 735 tuhad domennimid oli .no-zonas vn 2017 elokus.
+
+Registracii om lasktud kahtendel tazopindal. Erasil subdomenoil om registracijan röunadusid. Üks' organizacii voib registriruida kaikiš enamba 100 domennimed kahtendel tazopindal, se lugu om alemba personoiden täht.
 
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
-* [http://www.norid.no/ Domenan sait (''norid.no'')] {{ref-en}} {{ref-no}}, ohjandai om ''«UNINETT Norid A/S»'', Tronheim
+* [http://www.norid.no/ Domenan sait (''norid.no'')] {{ref-en}} {{ref-no}}, ohjandai om ''«UNINETT Norid A/S»'', [[Tronheim]]
 * [http://iana.org/domains/root/db/no.html IANA-informacii (''iana.org'').] {{ref-en}}
 {{Commons|Category:.no}}
 
