--- a/.no.mw
+++ b/.no.mw
@@ -1,7 +1,7 @@
 [[Fail:.no logo.svg|thumb|right|250px|Domenan logotip]]
 '''.no''' om [[Norvegii|Norvegijan]] [[DNS|Internet-domen]]. Se om avaitud [[1987. voz'|1987]]-nden voden 17. päiväl keväz'kud<ref>[http://iana.org/domains/root/db/no.html IANA — .no Domain Delegation Data / ''Iana.org''.] {{ref-en}}</ref>. Kaik 735 tuhad domennimid oli .no-zonas vn 2017 elokus.
 
-Registracii om lasktud kahtendel tazopindal. Erasil subdomenoil om registracijan röunadusid. Üks' organizacii voib registriruida kaikiš enamba 100 domennimed kahtendel tazopindal, se lugu om alemba personoiden täht. Vn 2004 uhokuspäi voib kävutada [[norvegijan kel'|norvegijan kelen]] i [[saamen keled|saamen keliden]] toižid kirjamid domennimes.
+Registracii om lasktud kahtendel tazopindal. Erasil subdomenoil om registracijan röunadusid. Üks' organizacii voib registriruida kaikiš enamba 100 domennimed kahtendel tazopindal, se lugu om viž personoiden täht. Personale pidab olda Norvegijan rezidentan identifikaciženke nomeranke, hänen igä — 18 vot da sen enamba. Vn 2004 uhokuspäi voib kävutada [[norvegijan kel'|norvegijan kelen]] (æ, ø, å) i [[saamen keled|saamen keliden]] (kaks'kümne kirjant: á·à·ä·č·ç·đ·é·è·ê·ŋ·ń·ñ·ó·ò·ô·ö·š·ŧ·ü·ž) toižid kirjamid domennimes.
 
 Eriližed ülätazopindan '''.bv'''- i '''.sj'''-domenad oma registriruidud Norvegijan merentagaižiden Buve-, Špicbergen- i Jan-Maien-territorijoiden täht vl 1997. Niiden sariden ristitišton lugu om pen', ka registracii ei ole väges sil kahtel domenal, i niiden ohjandai Norid-kompanii kävutab .no-domenad sariden territorijoil.
 
