--- a/Doncova_Dar'ja.mw
+++ b/Doncova_Dar'ja.mw
@@ -2,9 +2,11 @@
 | изображение = Daria Dontsova MOW 03-2011 02.jpg
 | описание изображения = Dar'ja Doncova vn 2011 keväz'kus
 }}
-'''Dar'ja Doncova''' ({{lang-ru|Дарья Донцова}}), todesine nimi — '''Agrippina Arkad'jevna Doncova (Vasil'jeva)''' (ven.: ''Агриппина Аркадьевна Донцова (Васильева)''; sünd. [[7. kezaku]] [[1952]], [[Moskv]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om venälaine kirjutai da TV-vedai, naiždetektividen avtor.
+'''Dar'ja Doncova''' ({{lang-ru|Дарья Донцова}}), todesine nimi — '''Agrippina Arkad'jevna Doncova (Vasil'jeva)''' (ven.: ''Агриппина Аркадьевна Донцова (Васильева)''; sünd. [[7. kezaku]] [[1952]], [[Moskv]], [[Nevondkundaline Ühtištuz|NSTÜ]]) om venälaine kirjutai, radio- da TV-vedai, naiždetektividen avtor, kirjuti scenarijoid TV-serialiden täht.
 
-Kirjuti enamb mi 260 kirjad.
+Naine lopi opendust [[Moskvan valdkundaline universitet|Moskvan valdkundaližen universitetan]] žurnalistikan fakul'tetal vl 1974. Hänen rad oli verhiže kelihe sidodud, openui niid süvižikš lapsessai.
+
+Sädab vspäi 1999. Kirjuti enamb mi 260 kirjad, kirjserijoiš tobjimalaz. Venäman kirjkodin oficialižiden andmusiden mödhe, vll 2012−2018 Doncovan kirjad oliba kaikiš enamba pästtud Venämaha čomamahtoižen literaturan täuz'kaznuziden täht jaguses.
 
 == Homaičendad ==
 <references/>
