*Empty MediaWiki Message*

--- a/Fontank-jogen_randird.mw
+++ b/Fontank-jogen_randird.mw
@@ -1,7 +1,7 @@
 [[Fail:Fontanka embankment SPB 1.jpg|thumb|right|250px|Fontank-jogen randird läz [[Moskvan prospekt (Piter)|Moskvan prospektad]] vl 2012]]
 '''[[Fontank]]-jogen randird''' ({{lang-ru|Набережная реки Фонтанки}}) om randird [[Piter]]in keskuzpalas.
 
-Randird om ozrikkivine, vedase vezivalun kaikel pidusel. Se om saudud molembil randoil [[Jekaterina II]]-imperatornaižen carindan aigan. Randirdan hura pala zavodiše edemba mi oiged. Avtotelikund tegese ühthe čuradushe kaikuččel randal. Velotehut om erigoittud vn 2017 redukus. Kaik 15 sildad ühtenzoittas randoid.
+Randird om ozrikkivine, vedase vezivalun kaikel pidusel (6,7 kilometrad). Se om saudud molembil randoil [[Jekaterina II]]-imperatornaižen carindan aigan. Randirdan hura pala zavodiše edemba mi oiged. Avtotelikund tegese ühthe čuradushe kaikuččel randal. Velotehut om erigoittud vn 2017 redukus. Kaik 15 sildad ühtenzoittas randoid.
 
 Enamba 200 pertid om saudud randirdal, järghine istorine pertišt, sidä kesken [[Venäman imperii|Venäman imperijan]] erižpertid da toižed muštnikad. Kaik om viden metrostancijan lähtendad randirdale: [[Tehnologine institut (metrostancii)|Tehnologine institut]] (kahtes jonospäi), [[Puškinskaja (metrostancii, Piter)|Puškinskaja]], [[Vladimirskaja (metrostancii)|Vladimirskaja]], [[Spasskaja (metrostancii)|Spasskaja]], [[Zvenigorodskaja (metrostancii, Piter)|Zvenigorodskaja]].
 
