--- a/Leknes.mw
+++ b/Leknes.mw
@@ -13,13 +13,19 @@
  | Telefonkod = +47-760
  | Aigvö = tal'vel [[UTC]]+1,<br />kezal [[UTC]]+2
 }}
-'''Leknes''' (mugažo [[norvegijan kel'|norvegijan kelel]], {{lang-se|Liehkke}}) om [[Norvegii|Norvegijan]] lidn [[Nurlann]]-agjas (fül'kes). Se om [[Vestvogöi]]-kommunan da saren administrativine keskuz.
+'''Leknes''' (mugažo [[norvegijan kel'|norvegijan kelel]], {{lang-se|Liehkke}}) om [[Norvegii|Norvegijan]] lidn [[Nurlann]]-agjas (fül'kes). Se om [[Vestvogöi]]-kundan (kommunan) da saren administrativine i torguindan keskuz.
 
 Eländpunkt sai lidnan statusad vl 2002.
 
-Lidn sijadase mägikahal [[Lofoten (sared)|Lofoten-sarištol]] läz sen geografišt keskust, 10 m ü.m.t. keskmäižel korktusel. Merivaldmad i lendimport penen aviacijan täht ratas Leknesas.
+== Geografijan andmused ==
+Lidn sijadase agjan lodehes, mägikahal [[Lofoten (sared)|Lofoten-sarištol]] läz sen geografišt keskust, 10 m ü.m.t. keskmäižel korktusel. Lähembaine sur' eländpunkt om [[Gravdal]]-külä (pol'tošt tuhad eläjid) 4 km suvipäivlaskmha lidnaspäi.
 
+Klimat om ven neps valdmeren. Sadegiden kezaline norm om nelländez tal'veližespäi.
+
+== Eläjad da transport ==
 Vl 2012 lidnan eläjiden lugu oli 2 715 ristitud. Kaikiš suremb ristitišt om nügüd'.
+
+Merivaldmad (''Leknes Havn'') vasttas kruizlaivoid. Lendimport radab Leknesas penen aviacijan täht, jogapäiväline ühtenzoituz om [[Budö]]- i [[Tromsö]]-lidnoidenke. Evropine E10-mante ühtenzoitab kontinentanke.
 
 {{Commons|Category:Leknes}}
 
