Replacing Coat_of_arms_of_Chechnya.svg with [[File:Coat_of_Arms_of_Chechnya_(2020-).svg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]]).

--- a/Čečenijan_Tazovaldkund.mw
+++ b/Čečenijan_Tazovaldkund.mw
@@ -3,7 +3,7 @@
 |Nimi           = Čečenijan Tazovaldkund
 |Venälaine nimi = Чеченская Республика
 |Flag           = [[Fail:Flag of the Chechen Republic.svg|150px|Čečenijan Tazovaldkundan flag]]
-|FSCoA          = [[Fail:Coat of arms of Chechnya.svg|110px|Čečenijan Tazovaldkundan znam]]
+|FSCoA          = [[Fail:Coat of Arms of Chechnya (2020-).svg|110px|Čečenijan Tazovaldkundan znam]]
 |FlagLnk        = Čečenijan Tazovaldkundan flag
 |CoALnk         = Čečenijan Tazovaldkundan znam
 |FSMap          = [[Fail:Map of Russia - Chechnya.svg|300px]]
