--- a/Kargat_(lidn).mw
+++ b/Kargat_(lidn).mw
@@ -5,10 +5,10 @@
  | Lidnanznam text = Kargatan lidnanznam
  | Flag text =
  | Valdkund = Venäma
- | Eläjiden lugu = 9,519
- | Voz' = 2017
+ | Eläjiden lugu = 8,914
+ | Voz' = 2021
  | Pind = 69
- | Fail = Kargat railway station.jpg
+ | Fail = Переезд в Каргате-1.jpg
  | Pämez' = Vladimir Ponomarenko<br />(reduku 2017—)
  | Telefonkod = +7-38365-xx-xxx
  | Avtokod = 54. 154
@@ -27,15 +27,23 @@ Lidn sijadase Kargat-jogen (387 km) randoil sen keskjoksmuses (vedhudetoman [[Č
 Kaks' pen't žilod (kaik 13 rist. vl 2017) mülüdas lidnankundha Karasukan ližaks: Kapralovo-blokpost i Kazarm 3144 km. Lidnankundan pind — 281,57 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 10 042 ristitud, lidnankundan — 10 059 ristitud, rajonan koume videndest. Kaikiš suremb lidnan ristitišt oli 12..13 tuh. eläjid vll 1959−2001 (13 100 rist. vl 1996). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Illöi-endustajan jumalanpert'<ref>[http://sobory.ru/geo/locat/25634 Kargatan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om saudud vll 2010−2013.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 10 042 ristitud, lidnankundan — 10 059 ristitud, rajonan koume videndest. Kaikiš suremb lidnan ristitišt oli 12..13 tuh. eläjid vll 1959−2001 (13 100 rist. vl 1996).
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Illä-endustajan jumalanpert'<ref>[http://sobory.ru/geo/locat/25634 Kargatan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om saudud vll 2010−2013.
 
 Kolivanin agrarižen kolledžan filial om professionaližen opendusen aluzkundaks.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Насосная каргат.jpg|Vezičuhunduz i pompstancii raudtestancijanno (2008)
+Kargat railway station.jpg|Kargat-päraudtestancijan sauvuz vl 2008
+</gallery>
 
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
-* [http://admkargat.ru/ Lidnan da rajonan tobmuden aluzkundoiden oficialine sait (''admkargat.ru'').] {{ref-ru}}
+* [http://admkargat.nso.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admkargat.nso.ru'').] {{ref-ru}}
 {{Commons|Category:Kargat}}
 
 {{Novosibirskan agjan lidnad}}
