+ galerei, + kosketused, aktualizacii

--- a/Kuibišev_(Novosibirskan_agj).mw
+++ b/Kuibišev_(Novosibirskan_agj).mw
@@ -5,9 +5,9 @@
  | Lidnanznam text = Kuibiševan lidnanznam (Novosibirskan agj)
  | Flag text = Kuibiševan flag (Novosibirskan agj)
  | Valdkund = Venäma
- | Eläjiden lugu = 44,246
- | Voz' = 2017
- | Pind = 90
+ | Eläjiden lugu = 43,195
+ | Voz' = 2021
+ | Pind = 109,73
  | Fail = Kuybyshev 23 06 09.JPG
  | Pämez' = Alik Andronov<br />(kül'mku 2016—)
  | Telefonkod = +7-38362-xx-xxx
@@ -30,12 +30,26 @@ Lidn sijadase [[Om'|Om'-jogen]] molembil randoil ([[Irtiš]]an oiged ližajogi),
 Kuibišev om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 109,73 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 45 299 ristitud, rajonan koume nelländest. Kaikiš suremb ristitišt oli 50..51 tuh. eläjid vll 1986−2001 (51 800 eläjad vl 1996). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Johann-endustajan Sündundpäivän jumalanpert' om olmas lidnas vspäi 1907.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 45 299 ristitud, rajonan koume nelländest. Kaikiš suremb ristitišt oli 50..51 tuh. eläjid vll 1986−2001 (51 800 eläjad vl 1996).
 
-Professionaližen opendusen aluzkundad: Kuibiševan medicinine i maižandusen tehnikumad, pedagogine i politehnine kolledžad, 2 profškolad, Novosibirskan valdkundaližen pedagogižen universitetan filial.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Johann-endustajan Sündundpäivän jumalanpert'<ref>[http://sobory.ru/geo/locat/14396 Kuibiševan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om olmas lidnas vspäi 1907.
+
+Professionaližen opendusen aluzkundad: Kuibiševan medicinine i maižandusen tehnikumad, pedagogine<ref>[http://pedkolledg.kuyby.edu54.ru/ Kuibiševan pedagogižen kolledžan sait (''pedkolledg.kuyby.edu54.ru'').] {{ref-ru}}</ref> i politehnine<ref>[http://kpknso.ru/ Kuibiševan politehnižen kolledžan sait (''kpknso.ru'').] {{ref-ru}}</ref> kolledžad, kaks' profškolad, Novosibirskan valdkundaližen pedagogižen universitetan filial.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+KainskAdmin2009.JPG|Kuibiševan rajonan administracijan sauvuz (2009)
+P 20181121 174348.jpg|Johann-endustajan Sündundpäivän jumalanpert', vn 2018 nägu
+P 20181121 175751.jpg|Lidnan kodirandantedištandmuzei (2018)
+P 20181121 162750.jpg|Kul'turkeskuz V.V. Kuibiševan nimed (2018)
+Kainsk mem1941-1945WAR.jpg|Memorial pölištunuzile [[Sur' Tatanmaine soda|Suren sodan]] aigan, vn 2009 nägu
+</gallery>
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
-* [http://kainsk-today.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''kainsk-today.ru'').] {{ref-ru}}
+* [http://kainsk.nso.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''kainsk.nso.ru'').] {{ref-ru}}
 {{Commons|Category:Kuybyshev}}
 
 {{Novosibirskan agjan lidnad}}
