--- a/Togučin.mw
+++ b/Togučin.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Togučinan lidnanznam
  | Flag text = Togučinan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 21,159
- | Voz' = 2017
- | Pind = 25
+ | Eläjiden lugu = 20,489
+ | Voz' = 2021
+ | Pind = 72,63
  | Fail = Toguchin railway station.jpg
- | Pämez' = Sergei Gončarov (1997—)
+ | Pämez' = Sergei Gončarov<br />(1997—)
  | Telefonkod = +7-38340-xx-xxx
  | Avtokod = 54. 154
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
@@ -27,9 +27,14 @@ Lidn sijadase [[In' (Obin alaližajogi)|Inänjogen]] ({{lang-ru|Иня́}}) rand
 Togučin om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 72,63 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 21 500 ristitud, rajonan koumandez. Kaikiš suremb ristitišt oli 23 700 eläjad vll 1996−1998. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Serafim Sarovalaižen jumalanpert' om olmas lidnas (saudihe vspäi 1992).
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 21 500 ristitud, rajonan koumandez. Kaikiš suremb ristitišt oli 23 700 eläjad vll 1996−1998.
 
-Togučinan mechoz-tehnikum om professionaližen opendusen aluzkundaks.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Serafim Sarovalaižen jumalanpert'<ref>[http://sobory.ru/geo/locat/22801 Ph. Serafim Sarovalaižen jumalanpert' ''sobory.ru''-saital.] {{ref-ru}}</ref> (om avaitud vspäi 1993 kohetud pertiš) i kaks' časounäd oma olmas lidnas.
+
+Togučinan politehnine kolledž<ref>[http://toglht.ru/ Togučinan politehnižen kolledžan sait (''toglht.ru'').] {{ref-ru}}</ref> (ende mechoz-tehnikum) om professionaližen opendusen aluzkundaks.
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.admtog.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''admtog.ru'').] {{ref-ru}}
