*Empty MediaWiki Message*

--- a/Togučin.mw
+++ b/Togučin.mw
@@ -22,14 +22,14 @@ Eländpunktan aluz om pandud vl 1867 kuti ''Togučin-külä''. Vl 1929 zavottihe
 Togučin šingotase pompstancijoiden tegimel, sömtegimištol (oludenkeitim, leibtegim, maidedheotand) i pilindmaterialiden edheotandal.
 
 == Geografijan andmused ==
-Lidn sijadase [[In' (Obin alaližajogi)|Inänjogen]] ({{lang-ru|Иня́}}) randoil, 150 m ü.m.t. keskmäižel korktusel. Inän pen' Togučink-ližajogi lankteb oiktalpäi. «Novosibirsk — [[Novokuzneck]]»-raudte läbitab lidnad, raudtestancii om saudud jogen hural randal. Kaks' avtotesildad ühtenzoittas jogen randoid. Matkad [[Kemerovon agj]]hasai om 25 km pohjoižpäivnouzmha orhal, [[Novosibirsk]]an keskushesai om 97 km päivlaskmha orhal, 110 km avtol vai raudtedme, röunhasai — 100 km. Lähembaine lidn om [[Bolotnoje]] 48 km pohjoižhe orhal vai 70 km avtotedme.
+Lidn sijadase [[In' (Obin alaližajogi)|Inänjogen]] ({{lang-ru|Иня́}}) randoil, 150 m ü.m.t. keskmäižel korktusel. Inän pen' Togučink-ližajogi lankteb oiktalpäi. «Novosibirsk — [[Novokuzneck]]»-raudte läbitab lidnad, Togučin-raudtestancii om saudud jogen hural randal. Kaks' avtotesildad ühtenzoittas jogen randoid. Matkad [[Kemerovon agj]]hasai om 25 km pohjoižpäivnouzmha orhal, [[Novosibirsk]]an keskushesai om 97 km päivlaskmha orhal, 110 km avtol vai raudtedme, röunhasai — 100 km. Lähembaine lidn om [[Bolotnoje]] 48 km pohjoižhe orhal vai 70 km avtotedme.
 
 Togučin om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 72,63 km².
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 21 500 ristitud, rajonan koumandez. Kaikiš suremb ristitišt oli 23 700 eläjad vll 1996−1998.
 
-[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Serafim Sarovalaižen jumalanpert'<ref>[http://sobory.ru/geo/locat/22801 Ph. Serafim Sarovalaižen jumalanpert' ''sobory.ru''-saital.] {{ref-ru}}</ref> (om avaitud vspäi 1993 kohetud pertiš) i kaks' časounäd oma olmas lidnas.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Serafim Sarovalaižen jumalanpert'<ref>[http://sobory.ru/geo/locat/22801 Togučinan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> (om avaitud vspäi 1993 kohetud pertiš) i kaks' časounäd oma olmas lidnas.
 
 Togučinan politehnine kolledž<ref>[http://toglht.ru/ Togučinan politehnižen kolledžan sait (''toglht.ru'').] {{ref-ru}}</ref> (ende mechoz-tehnikum) om professionaližen opendusen aluzkundaks.
 
