--- a/Mägi.mw
+++ b/Mägi.mw
@@ -14,9 +14,15 @@ Jagadas mägid korktusen mödhe:
 * keskmäižed, relätivižen korktusen 0,8..2 km i 1..3 km absolütižen;
 * madalad, niiden relätivine korktuz om 500..800 metrad, absolütižikš tuhaze metrhasai kortte.
 
-== Mägehe sidodud vepsän ozoitez ==
+== Mägehe sidodud vepsän muštatišed da ozoitesed ==
+=== Muštatiž ===
 <blockquote>
-* Ivoi itkeb mägen päs (tohuz palab).
+* ''Mägelpäi palab päiv, Änižespäi vilu päiv.''
+</blockquote>
+
+=== Ozoitez ===
+<blockquote>
+Ivoi itkeb mägen päs (tohuz palab).
 </blockquote>
 
 == Homaičendad ==
