--- a/Änine.mw
+++ b/Änine.mw
@@ -7,7 +7,12 @@ Järven pind saridenke om läz 9700 km². Basseinan pind — 66 284 nellikkilome
 
 Läz tuhad penid vezivaluid da 52 pit'kad joged (10 km pidemb) langetas järvhe, no vaiše üks' — [[Süvär']] — jokseb lähten Änižespäi. Om reguliruindpadoseinid Süvärin üläjoksmuses. Kaik koume lidnad om Änižen randal: [[Petroskoi]], [[Kondopog]] da [[Medvežjegorsk]]. Järv om [[Vaugedmeren-Baltijanmeren vezite]]n palaks. [[Volgan-Baltijanmeren vezite]] ümbärdab järved randaližedme kanaladme.
 
-Kaik om 1650 sart Änižes, tobj pala sijadase järven pohjoižes, niiden ühthine pind om 224 km². [[Kiži]]-sar' mülüb sariden lughu, sil om 89 pušt arhitekturan muštpacast 15.—20. voz'sadoid (časounäd, pühäkodid, küläpertid, mellicad da aitod). Nece keraduz om pandud [[UNESCO|UNESCO:n]] mail'man jäl'gusen nimikirjuteshe. Änižen päivnouzmrandal om 1200 [[petroglif]]ad (4.—2. voz'tuhad edel meiden erad). 
+Kaik om 1650 sart Änižes, tobj pala sijadase järven pohjoižes, niiden ühthine pind om 224 km². [[Kiži]]-sar' mülüb sariden lughu, sil om 89 pušt arhitekturan muštpacast 15.-20. voz'sadoid (časounäd, pühäkodid, küläpertid, mellicad da aitod). Nece keraduz om pandud [[UNESCO|UNESCO:n]] mail'man jäl'gusen nimikirjuteshe. Änižen päivnouzmrandal om 1200 [[petroglif]]ad (4.-2. voz'tuhad edel meiden erad). 
+
+== Änižhe sidodud vepsän muštatiž ==
+<blockquote>
+* ''Mägelpäi palab päiv, Änižespäi vilu päiv.''
+</blockquote>
 
 == Homaičendad ==
 <references />
